--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,7 +7,7 @@
 # Ruei-Yuan Lu <RueiYuan.Lu@gmail.com>, 2011
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-25 03:48+0000\n"
