--- a/po/bg.po
+++ b/po/bg.po
@@ -12,7 +12,7 @@
 # Радослав Иванов <reckku@gmail.com>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-19 22:33+0000\n"
