--- a/po/cs.po
+++ b/po/cs.po
@@ -16,9 +16,9 @@
 # Petr Šimáček <petr.simacek@gmail.com>, 2013-2014
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2015-02-28 19:18+0100\n"
+"POT-Creation-Date: 2015-04-03 11:52+0200\n"
 "PO-Revision-Date: 2015-02-27 10:53+0000\n"
 "Last-Translator: nd76er <nd76er@gmail.com>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/audacious/language/"
