--- a/po/de.po
+++ b/po/de.po
@@ -13,7 +13,7 @@
 # Thomas Lange <thomas-lange2@gmx.de>, 2014-2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-18 14:41+0000\n"
