--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -7,7 +7,7 @@
 # Jorge A. García Sosa <kamesennin555@icloud.com>, 2014-2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-08 19:38+0000\n"
