--- a/po/gl.po
+++ b/po/gl.po
@@ -10,7 +10,7 @@
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2012,2014-2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-05 07:36+0000\n"
