--- a/po/ja.po
+++ b/po/ja.po
@@ -13,7 +13,7 @@
 # ABE Tsunehiko, 2013
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-20 17:34+0000\n"
