--- a/po/ko.po
+++ b/po/ko.po
@@ -14,7 +14,7 @@
 # Seong-ho Cho <darkcircle.0426@gmail.com>, 2012-2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-14 15:07+0000\n"
