--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -11,7 +11,7 @@
 # Alexandro Casanova <shorterfire@gmail.com>, 2012
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-05 13:02+0000\n"
