--- a/po/sr.po
+++ b/po/sr.po
@@ -6,7 +6,7 @@
 # Мирослав Николић <miroslavnikolic@rocketmail.com>, 2014-2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-05 19:51+0000\n"
