--- a/po/tr.po
+++ b/po/tr.po
@@ -23,7 +23,7 @@
 # Volkan Gezer <volkangezer@gmail.com>, 2013,2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-13 00:59+0000\n"
