--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -22,7 +22,7 @@
 # 蒋浩海 <jhaohai@foxmail.com>, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2015-02-28 19:18+0100\n"
 "PO-Revision-Date: 2015-02-05 10:15+0000\n"
